ProjetCompil/Verif/Test/fail/temp.cas
program
   A : 1..5;
   B : real;
begin
    --test des array
end.